Use the -XX:-UseBiasedLocking JVM option by default.
git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-apollo/trunk@1291528 13f79535-47bb-0310-9956-ffa450edef68